k8s/namespaces/base/istio-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/enforce: privileged
    kustomize.toolkit.fluxcd.io/prune: disabled
