k8s/namespaces/base/istio-system/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
    - 'jaeger.${CLUSTER_SUB_DOMAIN}.${CLUSTER_DOMAIN}'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 16686
            host: jaeger-query.istio-system.svc.cluster.local
